<resources>
    <string name="app_name">My Project Exam</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_btn_home_destination" />
    <string name="str_nav_home">Home</string>
    <string name="location">Location</string>
    <string name="string_location">Location</string>
    <string name="string_string_location">Location</string>
    <string name="str_favorite_restaurants">Favorite Restaurants</string>
    <string name="string_str_favorite_restaurants">Favorite Restaurant</string>
    <string name="string_string_str_favorite_restaurants">Favorite Restaurant</string>
    <string name="str_search">Search</string>
    <string name="string_str_search">Search</string>
    <string name="str_textViewHome">Restaurants Ghent</string>
    <string name="str_textViewFavorites">"Favorites Restaurants "</string>
    <string name="str_editTextAddRestaurant" />
    <string name="str_hint_add_restaurant_name">Add Restaurant Name</string>
    <string name="str_image_add_image_restaurant" />
    <string name="str_home_fragment_title_restaurant">Name Restaurant</string>
    <string name="str_home_fragment_tv_address">Address</string>
    <string name="str_home_fragment_tv_restaurant_description">Description</string>
    <string name="str_home_fragment_tv_restaurant_titel">Name Restaurant</string>
    <string name="str_activity_update_restaurant_name">Add Restaurant Name</string>
    <string name="str_activity_update_restaurant_description">Update Description</string>
    <string name="str_activity_update_restaurant_button_update">Update</string>
    <string name="str_activity_update_restaurant_update_address">Update Restaurant Address</string>
    <string name="str_activity_update_restaurant_updatepicture">UpdatePicture</string>
    <string name="str_buttonSave">Save</string>
    <string name="str_imageViewAddRestaurantImage">Select Image</string>

    <string name="str_add_description_restaurant">Add Description of Restaurant</string>
    <string name="str_hint_add_restaurant_address">Add Address Restaurant</string>
    <string name="str_hint_fragment_restaurant">Search Restaurant</string>
    <string name="str_editText_search_fragment">Search Restaurant</string>
</resources>
