<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateRestaurantActivity">

    <ImageView
        android:id="@+id/imageViewUpdateRestaurantImage"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_marginTop="3dp"
        android:contentDescription="@string/str_activity_update_restaurant_updatepicture"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.729"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054"
        app:srcCompat="@drawable/ic_baseline_image_search_24" />

    <LinearLayout
        android:id="@+id/linearLayoutUpdateRestaurant"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewUpdateRestaurantImage">

        <EditText
            android:id="@+id/editTextUpdateRestaurantTitle"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="Add Restaurant Name"
            android:ems="10"
            android:hint="@string/str_activity_update_restaurant_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/editTextTextUpdateRestaurantDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="Add Restaurant Name"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/str_activity_update_restaurant_description"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/editTextTextUpdateRestaurantAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="Add Restaurant Name"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/str_activity_update_restaurant_update_address"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:text="@string/str_activity_update_restaurant_button_update"
            android:textColor="#757575" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
