<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlLayoutHome"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.HomeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/white"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#06BCC1">

            <ImageView
                android:id="@+id/image_home_restaurant"
                android:layout_width="120dp"
                android:layout_height="130dp"
                android:layout_marginStart="24dp"
                android:contentDescription="@string/str_image_add_image_restaurant"
                android:scaleType="fitXY"
                android:src="@drawable/restaurant"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.414" />

            <TextView
                android:id="@+id/tv_title_home"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/str_home_fragment_tv_restaurant_titel"
                android:textColor="#4E342E"
                app:layout_constraintBottom_toTopOf="@id/tv_description_home"
                app:layout_constraintStart_toEndOf="@+id/image_home_restaurant"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_description_home"
                android:layout_width="124dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:text="@string/str_home_fragment_tv_restaurant_description"
                android:textColor="#4E342E"
                app:layout_constraintBottom_toTopOf="@+id/tv_address_home"
                app:layout_constraintStart_toEndOf="@+id/image_home_restaurant"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_home" />

            <TextView
                android:id="@+id/tv_address_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"

                android:layout_marginBottom="40dp"
                android:text="@string/str_home_fragment_tv_address"
                android:textColor="#4E342E"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_home_restaurant" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>





